# Revolst

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: error.rs  lib.rs
src/gateway/: mod.rs
src/http/: mod.rs
src/model/: channel.rs  mod.rs
src/model/message/: attachment.rs  embed.rs  mod.rs
