[package]
name = "revolst"
version = "0.0.1"
edition = "2024"
description = "A Revolt chat API library for making bots."
homepage = "https://github.com/Yoshiboi18303/Revolst"
authors = ["Yoshiboi18303"]
readme = "README.md"
repository = "https://github.com/Yoshiboi18303/Revolst"
license = "MIT OR Apache-2.0"
keywords = ["revolt", "chat", "api", "bot", "library"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.4", features = ["full"] }
tokio-tungstenite = { version = "0.27" }
url = "2.5"
anyhow = "1"
tracing = "0.1"

